--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
@@ -148,8 +148,8 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabelTipoDocumento" min="-2" pref="38" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jComboBoxTipoDocumento" min="-2" pref="58" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                  <Component id="jComboBoxTipoDocumento" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jLabelNumeroDocumento" min="-2" pref="79" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="jTextFieldNumeroDocumento" min="-2" pref="134" max="-2" attributes="0"/>
@@ -174,7 +174,7 @@
                           <Component id="jTextFieldAnioNacimiento" min="-2" pref="43" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="89" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -295,16 +295,20 @@
         <Component class="javax.swing.JComboBox" name="jComboBoxTipoDocumento">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Microsoft YaHei UI" size="11" style="0"/>
+              <Font name="Microsoft YaHei UI" size="14" style="0"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="7">
                 <StringItem index="0" value="DNI"/>
                 <StringItem index="1" value="CUIT"/>
                 <StringItem index="2" value="CUIL"/>
+                <StringItem index="3" value="LC"/>
+                <StringItem index="4" value="LE"/>
+                <StringItem index="5" value="CI"/>
+                <StringItem index="6" value="PASAPORTE"/>
               </StringArray>
             </Property>
           </Properties>
