--- a/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
@@ -359,7 +359,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="DNi:"/>
+            <Property name="text" type="java.lang.String" value="DNI:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="clase">
